# Python-Chatbot

./: .gitignore  README.md  pyproject.toml  run_ai.sh  run_ai_assistant.py
project 1/: README.md  env.example  main.py  test_simple.py
